# acornserver

./: .gitignore  .pyre_configuration  CREDITS.md  Dockerfile  LICENSE.md  Pipfile  README.md  docker-compose.yaml  git.sh  manage.py  package-lock.json  pyproject.toml  requirements.txt  resetdb.fish  superuser.txt  tsconfig.json
.github/workflows/: codeql-analysis.yml  django.yml
account/: README.md  account_randomiser.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py
acorn/: README.md  settings.py  urls.py  wsgi.py
api/: README.md  apps.py  urls.py
api/inbox/: serializers.py  views.py
debug/: README.md  apps.py  urls.py  views.py
forum/: README.md  admin.py  apps.py  forum_randomiser.py  models.py  urls.py
forum/forms/: post.py  thread.py
forum/migrations/: 0001_initial.py
forum/views/: category.py  index.py  test_views.py  thread.py
inbox/: README.md  admin.py  apps.py  forms.py  inbox_randomiser.py  models.py  test_views.py  urls.py  views.py
root/: README.md  admin.py  apps.py  messages.py  models.py  news_article_randomiser.py  renderers.py  type_annotations.py  urls.py  views.py
root/migrations/: 0001_initial.py
root/templatetags/: debug.py  define.py  maths.py  pagination.py  units.py
root/utils/: get_parameters.py  random.py
scripts/: installgithooks.fish  resetdb.fish
scripts/githooks/: isort_hook.py  pre-commit
search/: README.md  apps.py  urls.py
search/forms/: music.py  user.py
search/views/: music.py  test_user.py  user.py
static/: README.md
static/css/: _acorn-custom-containers.scss  acorn.css  (+13 more)
templates/: README.md  base.html  blank.html  delete-confirmation-form.html  form-as-divs.html  form-as-table-raw.html  form-as-table.html  messages.html  none.html  pagination.html  reset-confirmation-form.html
test/: README.md  metainfo-v1-multi-complex.torrent  metainfo-v1-multi.torrent  metainfo-v1-single.torrent
torrent/: README.md  admin.py  apps.py  metainfo.py  metainfo_randomiser.py  search_indexes.py  test_metainfo.py  urls.py
tracker/: README.md  apps.py  test_views.py  urls.py  views.py
(+139 files in other folders)
