[tool.poetry]
name = "acornserver"
version = "0.1.0"
description = "Next-generation private BitTorrent Tracker"
authors = ["snowdrop4 <82846066+snowdrop4@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
django = "~4.0"
django-glrm = "^1.1"
django-markupfield = "^2.0"
django-picklefield = "^3.0"
django-debug-toolbar = "^3.0"
django-countries = "^7.0"
django-mptt = "^0.13"
django-stubs = "~1.12.0"
djangorestframework = "^3.0"
bcoding = "^1.0"
markdown = "^3.0"

[tool.poetry.dev-dependencies]
mypy = "*"
isort = "*"
black = "*"
pyflakes = "*"
flake8 = "*"
coverage = "^6"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unreachable = true
exclude = ["migrations/*"]

[tool.django-stubs]
django_settings_module = "acorn.settings"

[tool.isort]
profile = "black"
length_sort = true
balanced_wrapping = true
include_trailing_comma = true
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
